# cognitive-membrane

./: .gitignore  ROADMAP.md  pyproject.toml  readme.md  requirements.txt
brainstorm/side1/: 1-initialDocs.md  11-response.md  13-response.md  15-response.md  3-feedback_to_the_feedback.md  5-response.md  7-response.md  9-response.md
brainstorm/side2/: 10-implementation-roadmap.md  12-prototype-strategy.md  14-development-kickoff.md  16-final-thoughts.md  2-feedback.md  4-technical_discussion.md  6-technical-exploration.md  8-paradigm-shift.md
src/core/: activity_monitor.py  keyboard_monitor.py  macos_keyboard_monitor.py  pattern_recognition.py  pattern_validation.py  performance_monitor.py  typing_monitor.py
src/frontend/app/: .gitignore  package-lock.json  package.json  tsconfig.json
src/frontend/app/src/: App.tsx  types.ts
src/frontend/app/src/components/: ActivityIntensity.tsx  Demo.tsx  HeatMap.tsx
tests/core/: test_activity_monitor.py  test_keyboard_monitor.py  test_macos_keyboard_monitor.py  test_pattern_recognition.py  test_pattern_validation.py  test_performance_monitor.py  test_typing_monitor.py
